# WEB_7

./: config.ini  instruction.txt  main.py  my_select.py  pyproject.toml
conf/: db.py  function_models.py  models.py
migrations/: env.py
migrations/versions/: 1b79529f39e0_recreate_tables.py  cf3160a3f270_init.py
seeds/: grades.py  groups.py  students.py  subjects.py  teachers.py
