[tool.poetry]
name = "web-7"
version = "0.1.0"
description = ""
authors = ["Nataliya Khomenko <NataliaHomenko83@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
sqlalchemy = "^2.0.29"
faker = "^24.4.0"
psycopg2 = "^2.9.9"
alembic = "^1.13.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
